# fate-purple

./: DEPLOYMENT_GUIDE.md  FREE_HOSTING_GUIDE.md  Procfile  README.md  RelayBell_demo.py  add_flying_rules.py  add_flying_rules_part2.py  add_new_rules_v3.py  admin.html  analyze_sihua.py  app.py  audit_all_logic.py  audit_rules.py  backend_0215_fix.py  backend_ollama.py  backend_ollama02013.py  backend_ollama02015.py  backend_ollama02016.py  backend_ollama02016V2.py  backend_ollama0204.py  bazi_master.py  chat_history.json  check_models_v2.py  check_records.py  config.example.json  config.json  credentials.json  debug_gemini_connection.py  debug_rules.py  demo_backend.py  fate.html  find_broken.py  fix_4h_rules.py  fix_broken_rules.py  fix_complex_logic.py  fix_final_rules.py  fix_lucun_kong.py  fix_p02.py  fix_pa02.py  fix_rules_v2.py  (+35 more)
fatepurple.egg-info/: PKG-INFO  SOURCES.txt
static/ui/: announce.html  app.css  app.js  auth.js  broadcast.html  buddha.html  class_call.html  clients.html  controller.html  demo.html  devices.html  eew.html  features.html  guide.html  home.html  index.html  live.html  login.html  logo_preview.html  logs.html  mall_dashboard.html  manifest.json  market (1).html  market.html  qr.html  relay4.html  sched.html  shortcuts.html  silent-dashboard.html  single_reservation.html  status.html  student.html  sw.js  taigi_edu.html  teacher.html  teacher_call.html  tt.html  udp-console.bundle.js  user_guide.css  watch.html
